Canvas size overflow problem solved in linearEqn and LinQuadEqn programs

--- a/MATHS_PROJECTS/Linear and Quadratic System/style.css
+++ b/MATHS_PROJECTS/Linear and Quadratic System/style.css
@@ -2,8 +2,6 @@ body{
     margin: 0;
     background: transparent;
     position: absolute;
-    width: 100vw;
-    height: 100vh;
 }
 #GraphPage {
     position: absolute;
